# burner-wallet

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.claude/: settings.json
.claude/hooks/: java-me-lint.sh
.claude/skills/build-test/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/cross-verify/: SKILL.md
.claude/skills/crypto-review/: SKILL.md
.claude/skills/java-me-guard/: SKILL.md
.claude/skills/psbt-guide/: SKILL.md
.claude/skills/size-monitor/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-companion.yml  ci-signer.yml
companion/core/: Cargo.toml
companion/core/src/: address.rs  broadcast.rs  derivation.rs  error.rs  keys.rs  lib.rs  mnemonic.rs  network.rs  psbt.rs  wallet.rs
companion/core/tests/: integration.rs
companion/tui/: Cargo.toml
companion/tui/src/: app.rs  main.rs  ui.rs
docs/: javame-bitcoin-wallet-plan.md
docs/plans/: 2026-03-02-m0-emulator-poc.md  2026-03-03-m1a-j2me-core-crypto.md  2026-03-03-m1b-storage-ui-design.md  2026-03-03-m1b-storage-ui-impl.md  2026-03-04-m1c-psbt-qr-design.md  2026-03-04-m1c-psbt-qr-impl.md
protocol/vectors/: bip173-bech32.json  bip32-derivation.json  bip39-english.json  cross-impl-wallet.json  psbt-signing.json
signer/: build.xml
signer/src/org/burnerwallet/core/: AesUtils.java  Base58.java  Bech32.java  ByteArrayUtils.java  CompactSize.java  CryptoError.java  EntropyCollector.java  HashUtils.java  HexCodec.java
signer/src/org/burnerwallet/storage/: MidpRecordStoreAdapter.java  RecordStoreAdapter.java  WalletData.java  WalletStore.java
signer/src/org/burnerwallet/transport/: BitBuffer.java  (+7 more)
(+54 files in other folders)
