[package]
name = "burner-companion-core"
version = "0.1.0"
edition = "2021"
description = "Shared Bitcoin library for the Burner Wallet companion ecosystem"
license = "MIT"
repository = "https://github.com/GuilhermeVozniak/burner-wallet"

[dependencies]
bitcoin = { version = "0.32", features = ["serde", "rand-std"] }
bip39 = { version = "2", features = ["rand"] }
bdk_wallet = "1"
bdk_esplora = { version = "0.19", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
hex = "0.4"

[lib]
name = "burner_companion_core"
path = "src/lib.rs"
