[package]
name = "burner-companion-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI companion for the Burner Wallet"
license = "MIT"
repository = "https://github.com/GuilhermeVozniak/burner-wallet"

[dependencies]
burner-companion-core = { path = "../core" }
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "burner-companion"
path = "src/main.rs"
