[package]
name = "burner-companion-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI companion for the Burner Wallet"
license = "MIT"
repository = "https://github.com/GuilhermeVozniak/burner-wallet"

[dependencies]
burner-companion-core = { path = "../core" }
bitcoin = "0.32"
bdk_wallet = "1"
bip39 = { version = "2", features = ["rand"] }
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
hex = "0.4"

[[bin]]
name = "burner-companion"
path = "src/main.rs"
